idf_component_register(SRCS "AISContacts.cpp"
                            "AISContact.cpp"
                            "AISMessage.cpp"
                            "AISMsgType.cpp"
                            "AISMMSI.cpp"
                            "AISString.cpp"
                            "AISShipType.cpp"
                            "AISShipDimensions.cpp"
                            "AISEPFDFixType.cpp"
                            "AISNavigationStatus.cpp"
                            "AISCourseVector.cpp"
                            "AISPosition.cpp"
                            "AISRateOfTurn.cpp"
                            "AISSpeedOverGround.cpp"
                            "AISCourseOverGround.cpp"
                       INCLUDE_DIRS "include" "../../etl/include"
                       REQUIRES TaskObject Error Logger)
