idf_component_register(SRCS "DataModel.cpp"
                            "DataModelElement.cpp"
                            "DataModelNode.cpp"
                            "DataModelRoot.cpp"
                            "DataModelLeaf.cpp"
                            "DataModelRetainedValueLeaf.cpp"
                            "DataModelStringLeaf.cpp"
                            "DataModelBoolLeaf.cpp"
                            "DataModelInt8Leaf.cpp"
                            "DataModelUInt8Leaf.cpp"
                            "DataModelUInt16Leaf.cpp"
                            "DataModelUInt32Leaf.cpp"
                            "DataModelTenthsInt16Leaf.cpp"
                            "DataModelTenthsUInt16Leaf.cpp"
                            "DataModelHundredthsUInt8Leaf.cpp"
                            "DataModelHundredthsUInt16Leaf.cpp"
                       INCLUDE_DIRS "include" "../../etl/include"
                       REQUIRES TaskObject Logger Error)
