idf_component_register(SRCS "HundredthsInt16.cpp"
                            "HundredthsUInt8.cpp"
                            "HundredthsUInt16.cpp"
                            "HundredthsUInt32.cpp"
                            "TenthsInt16.cpp"
                            "TenthsUInt16.cpp"
                            "TenthsUInt32.cpp"
                       INCLUDE_DIRS "include"
                       REQUIRES Logger)
