idf_component_register(SRCS "MQTTBroker.cpp"
                            "MQTTConnection.cpp"
                            "MQTTSession.cpp"
                            "MQTTConnectMessage.cpp"
                            "MQTTConnectAckMessage.cpp"
                            "MQTTSubscribeMessage.cpp"
                            "MQTTSubscribeAckMessage.cpp"
                            "MQTTUnsubscribeMessage.cpp"
                            "MQTTUnsubscribeAckMessage.cpp"
                            "MQTTPingRequestMessage.cpp"
                            "MQTTPingResponseMessage.cpp"
                            "MQTTDisconnectMessage.cpp"
                            "MQTTMessage.cpp"
                            "MQTTString.cpp"
                            "MQTTUtil.cpp"
                       INCLUDE_DIRS "include" "../../etl/include"
                       REQUIRES DataModel TaskObject WiFiManager Logger Error)
