idf_component_register(SRCS "MQTTBroker.cpp"
                            "MQTTConnection.cpp"
                            "MQTTSession.cpp"
                            "MQTTConnectMessage.cpp"
                            "MQTTConnectAckMessage.cpp"
                            "MQTTSubscribeMessage.cpp"
                            "MQTTUnsubscribeMessage.cpp"
                            "MQTTPingRequestMessage.cpp"
                            "MQTTDisconnectMessage.cpp"
                            "MQTTMessage.cpp"
                            "MQTTString.cpp"
                            "MQTTUtil.cpp"
                       INCLUDE_DIRS "include" "../../etl/include"
                       REQUIRES StatsManager DataModel TaskObject WiFiManager Logger Error)
