idf_component_register(SRCS "NMEA.cpp"
                            "NMEASource.cpp"
                            "NMEAParser.cpp"
                            "NMEADecapsulator.cpp"
                            "NMEALine.cpp"
                            "NMEAMessage.cpp"
                            "NMEAMessageBuffer.cpp"
                            "NMEAMsgType.cpp"
                            "NMEADBKMessage.cpp"
                            "NMEADBSMessage.cpp"
                            "NMEADBTMessage.cpp"
                            "NMEAGGAMessage.cpp"
                            "NMEAGLLMessage.cpp"
                            "NMEAGSAMessage.cpp"
                            "NMEAGSTMessage.cpp"
                            "NMEAGSVMessage.cpp"
                            "NMEARMCMessage.cpp"
                            "NMEATXTMessage.cpp"
                            "NMEAVDMVDOMessage.cpp"
                            "NMEAVTGMessage.cpp"
                            "NMEACoordinate.cpp"
                            "NMEADataValid.cpp"
                            "NMEADate.cpp"
                            "NMEAFAAModeIndicator.cpp"
                            "NMEAGPSFixMode.cpp"
                            "NMEAGPSQuality.cpp"
                            "NMEAGSVSatelitteInfo.cpp"
                            "NMEALatitude.cpp"
                            "NMEALongitude.cpp"
                            "NMEAMagneticVariation.cpp"
                            "NMEARadioChannelCode.cpp"
                            "NMEATalker.cpp"
                            "NMEATime.cpp"
                            "NMEAInt8.cpp"
                            "NMEAUInt8.cpp"
                            "NMEAUInt16.cpp"
                            "NMEAUInt32.cpp"
                            "NMEATenthsInt16.cpp"
                            "NMEATenthsUInt16.cpp"
                            "NMEAHundredthsUInt8.cpp"
                            "NMEAHundredthsUInt16.cpp"
                            "NMEAAISMsgType.cpp"
                            "NMEAVDMAidToNavigationMsg.cpp"
                            "NMEAMMSI.cpp"
                            "NMEANavAidType.cpp"
                            "NMEAAISName.cpp"
                            "NMEAEPFDFixType.cpp"
                       INCLUDE_DIRS "include" "../../etl/include"
                       REQUIRES DataModel StatCounter StatsManager FixedPoint CharacterTools
                                StringTools Logger Error)
